Major Update of all kinds of info

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>demo_servlet_server_info</display-name>
+  <display-name>demo_ServletContext</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -8,5 +8,30 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+    <welcome-file>sis</welcome-file>
   </welcome-file-list>
+  <context-param>
+    <param-name>context-p1</param-name>
+    <param-value>context-v1</param-value>
+  </context-param>
+  <context-param>
+    <param-name>context-p2</param-name>
+    <param-value>context-v2</param-value>
+  </context-param>
+  <servlet>
+    <servlet-name>Server Information Servlet</servlet-name>
+    <servlet-class>ServerInfoServlet</servlet-class>
+    <init-param>
+      <param-name>servlet-p1</param-name>
+      <param-value>servlet-v1</param-value>
+    </init-param>
+    <init-param>
+      <param-name>servlet-p2</param-name>
+      <param-value>servlet-v2</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Server Information Servlet</servlet-name>
+    <url-pattern>/sis</url-pattern>
+  </servlet-mapping>
 </web-app>
